Most links in text added - stopping to eat..

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             minute train ride from
                             London and only 30 minutes train ride from Gatwick Airport.
                             <br>
-                            Brighton Station is right in the city centre so you will be able to
+                            <a href="https://www.nationalrail.co.uk/stations/BTN/details.html" target="_blank">Brighton Station</a> is right in the city centre so you will be able to
                             smell the sea as soon as you step off the train. Getting around is simple as it is a compact
                             city and easy to explore on foot or public
                             transport.
@@ -163,9 +163,9 @@
                             Make time to visit the city villages too including Hove; famous for its colourful
                             beach huts & Regency architecture, and Rottingdean, a picturesque, traditional English
                             village.
-                            Discover things to do in Brighton such as the Brighton Palace Pier, the Royal Pavilion and
+                            Discover things to do in Brighton such as the <a href="https://www.brightonpier.co.uk/" target="_blank">Brighton Palace Pier</a>, <a href="https://brightonmuseums.org.uk/royalpavilion/" target="_blank">the Royal Pavilion</a> and
                             the
-                            brand new British Airways i360.
+                            brand new <a href ="https://britishairwaysi360.com/" target="_blank">British Airways i360</a>.
                             <br>
                             The city is also home to a cornucopia of cultural delights as well as big name shops and
                             hundreds of independent boutiques.
@@ -394,9 +394,8 @@
                             Atlantic Coast, Newquay has previously been voted as “One of the Nation's Favourite Seaside
                             Towns”
                             in the prestigious Which Holiday Survey, “Best Family Holiday Destination” by readers of
-                            COAST
-                            magazine,
-                            and recently won Gold for “Best Seaside Towns for Families 2019” by Days Out with the Kids.
+                            <a href="https://www.coastmagazine.co.uk/" target="_blank">COAST magazine</a>,
+                            and recently won Gold for “Best Seaside Towns for Families 2019” by <a href="https://www.dayoutwiththekids.co.uk/" target="_blank"> Days Out with the Kids</a>.
                             Newquay also has some of Cornwall’s finest beaches! Newquay’s laid-back charm is here for
                             everyone to enjoy.
                             <br>
@@ -638,9 +637,9 @@
 
                         <p class="card-text panel-collapse collapse in"><span class="capital">C</span>ardigan, West
                             Wales,
-                            is the gateway to the Teifi
-                            Valley and the Ceredigion and
-                            Pembrokeshire Coastal Paths.
+                            is the gateway to the <a href="http://visitteifivalley.uk/" target="_blank">Teifi
+                            Valley</a> and the <a href="http://www.discoverceredigion.wales/outdoor-activities-and-adventures/walk-ceredigion/the-ceredigion-coast-path/" target="_blank">Ceredigion and
+                            Pembrokeshire Coastal Paths</a>.
                             The ancient town sits on the estuary of the River Teifi at the base
                             of Cardigan Bay.
                             <br>
@@ -649,19 +648,19 @@
                             arts and crafts, events and music festivals, and is a good base from which to discover
                             Ceredigion, Pembrokeshire and Carmarthenshire.
                             <br>
-                            A day out at Penbryn needs to be planned but is well worth the extra effort involved.
+                            A day out at <a href="https://www.thebeachguide.co.uk/south-wales/ceredigion/penbryn.htm" target="_blank">Penbryn</a> needs to be planned but is well worth the extra effort involved.
                             The car
                             park and facilities are some 400 metres from the beach! But there is a turning circle
                             and
                             dropping off point at the beach edge.
                             <br>
-                            Penbryn is owned by the National Trust The beach, almost a mile in length, is unspoilt
+                            Penbryn is owned by the <a href="https://www.nationaltrust.org.uk/coast-and-beaches" target="_blank">National Trust The beach</a>, almost a mile in length, is unspoilt
                             and the
                             fine golden sand and shallow waters make it perfect for children Discover the delights
                             of the
                             rock pools or there is fine walking to be had.
                             <br>
-                            There is a woodland walk from the car park to the beach or at low tide Tresaith can be
+                            There is a woodland walk from the car park to the beach or at low tide <a href="https://en.wikipedia.org/wiki/Tresaith" target="_blank">Tresaith</a> can be
                             reached.
                             Please do not bring your dog. The immediate area is sympathetic to coastal and woodland
                             birds
@@ -904,10 +903,10 @@
                             Notable villages in the south of Skye include Broadford, Armadale, Carbost, Elgol
                             and Kyleakin.
                             <br>
-                            The Island has a rich History covering many topics, such as: Dinosaur Fossils, Clan
-                            Warfare,
-                            Highland Clearances and the infamous ‘Bonnie Prince Charlie’ and the Jacobite
-                            Rebellion.
+                            The Island has a rich History covering many topics, such as: <a href="https://www.scottishgeology.com/geo/scotlands-fossils/" target="_blank">Dinosaur Fossils</a>, <a href="https://www.scotsman.com/whats-on/arts-and-entertainment/6-scotlands-bloodiest-clan-battles-594844" target="_blank">Clan
+                            Warfare</a>,
+                            <a href="https://www.britannica.com/event/Highland-Clearances" target="_blank">Highland Clearances</a> and the infamous <a href="https://www.history.co.uk/biographies/bonnie-prince-charlie" target="_blank">‘Bonnie Prince Charlie’</a> and the <a href="https://www.historic-uk.com/HistoryUK/HistoryofScotland/The-Jacobite-Revolts-Chronology/" target="_blank">Jacobite
+                            Rebellion</a>.
                             Both Clan MacDonald and Clan MacLeod have their Clan Castles on the Island and
                             should be on your
                             list of places to visit.
