Final text links and readMe updated

--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
                             Warfare</a>,
                             <a href="https://www.britannica.com/event/Highland-Clearances" target="_blank">Highland Clearances</a> and the infamous <a href="https://www.history.co.uk/biographies/bonnie-prince-charlie" target="_blank">‘Bonnie Prince Charlie’</a> and the <a href="https://www.historic-uk.com/HistoryUK/HistoryofScotland/The-Jacobite-Revolts-Chronology/" target="_blank">Jacobite
                             Rebellion</a>.
-                            Both Clan MacDonald and Clan MacLeod have their Clan Castles on the Island and
+                            Both <a href="https://www.armadalecastle.com/" target="_blank">Clan MacDonald</a> and <a href="https://www.visitscotland.com/info/tours/clan-macleod-tour-f9c377f6" target="_blank">Clan MacLeod</a> have their Clan Castles on the Island and
                             should be on your
                             list of places to visit.
                             <br><br>
@@ -924,9 +924,7 @@
                             Range offers
                             12 Munros - peaks above 3000ft (914m). There are many great walks on Skye to be
                             enjoyed by the
-                            less experienced, check both our Top Ten Skye Walks and Island Walks for detailed
-                            route
-                            guides.
+                            less experienced.
                         </p>
                         <a class="read_more_button" data-content="toggle-text">Read more</a>
                     </div>
