nav trans better, header fonts made btter, contact message size non resizeable

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             most
                             of your visit and see all the city has to offer.
                         </p>
-                        <a class="read_more_button" data-content="toggle-text">Read more</a>
+                        <a class="read_more_button" data-content="toggle-text">Read more....</a>
                     </div>
                 </div>
                 <div class="container-fluid">
@@ -421,7 +421,7 @@
                             <br>
                             This world class beach is also home to some of the biggest events and festivals.
                         </p>
-                        <a class="read_more_button" data-content="toggle-text">Read more</a>
+                        <a class="read_more_button" data-content="toggle-text">Read more....</a>
                     </div>
                 </div>
                 <div class="container-fluid">
@@ -666,7 +666,7 @@
                             birds
                             and the sea is home to Dolphins Porpoise and Seals.
                         </p>
-                        <a class="read_more_button" data-content="toggle-text">Read more</a>
+                        <a class="read_more_button" data-content="toggle-text">Read more....</a>
                     </div>
                 </div>
                 <div class="container-fluid">
@@ -926,7 +926,7 @@
                             enjoyed by the
                             less experienced.
                         </p>
-                        <a class="read_more_button" data-content="toggle-text">Read more</a>
+                        <a class="read_more_button" data-content="toggle-text">Read more....</a>
                     </div>
                 </div>
                 <div class="container-fluid">
