--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <a id="buttonFloat"></a>
     <!-- Navigation bar -->
 
-    <nav class="sticky-top navbar navbar-expand-lg navbar-light">
+    <nav class="sticky-top navbar navbar-expand-lg navbar-light nav-down">
         <a class="navbar-brand nav-link" href="#">
             <i class="fas fa-suitcase" aria-hidden="true"><span id="nav-staycation-britain"> Staycation
                     Britain</span></i>
@@ -92,7 +92,7 @@
 
     <!-- Hero container -->
 
-    <div class="jumbotron-fluid">
+    <header class="jumbotron-fluid">
         <div class="container-fluid">
             <div class="row">
                 <div id="hero">
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </header>
 
     <!-- Introduction -->
 
