--- a/index.html
+++ b/index.html
@@ -59,11 +59,20 @@
 </head>
 
 <body>
+
+    <!-- Empty area to bring links back to top of page -->
+
+    <div id = "home">
+        
+    </div>
+
+    <!-- Button floating on page to bring back to top -->
+
     <a id="buttonFloat"></a>
     <!-- Navigation bar -->
 
     <nav class="sticky-top navbar navbar-expand-lg navbar-light nav-down">
-        <a class="navbar-brand nav-link" href="#">
+        <a class="navbar-brand nav-link" href="#home">
             <i class="fas fa-suitcase" aria-hidden="true"><span id="nav-staycation-britain"> Staycation
                     Britain</span></i>
 
@@ -78,7 +87,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#home" id = "link1">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#locations">Locations</a>
@@ -142,7 +151,7 @@
 
     <!-- Brighton Location -->
 
-    <div id="locations" class="row row-cols-1">
+    <section id="locations" class="row row-cols-1">
         <div class="col mb-4">
             <div class="card">
                 <div id="brighton-card-body">
@@ -155,29 +164,36 @@
                             minute train ride from
                             London and only 30 minutes train ride from Gatwick Airport.
                             <br>
-                            <a href="https://www.nationalrail.co.uk/stations/BTN/details.html" target="_blank">Brighton Station</a> is right in the city centre so you will be able to
+                            <a href="https://www.nationalrail.co.uk/stations/BTN/details.html" target="_blank">Brighton
+                                Station</a> is right in the city centre so you will be able to
                             smell the sea as soon as you step off the train. Getting around is simple as it is a compact
                             city and easy to explore on foot or public
                             transport.
-                            <br>
+                            <br><br>
                             Make time to visit the city villages too including Hove; famous for its colourful
                             beach huts & Regency architecture, and Rottingdean, a picturesque, traditional English
                             village.
-                            Discover things to do in Brighton such as the <a href="https://www.brightonpier.co.uk/" target="_blank">Brighton Palace Pier</a>, <a href="https://brightonmuseums.org.uk/royalpavilion/" target="_blank">the Royal Pavilion</a> and
+                            Discover things to do in Brighton such as the <a href="https://www.brightonpier.co.uk/"
+                                target="_blank">Brighton Palace Pier</a>, <a
+                                href="https://brightonmuseums.org.uk/royalpavilion/" target="_blank">the Royal
+                                Pavilion</a> and
                             the
-                            brand new <a href ="https://britishairwaysi360.com/" target="_blank">British Airways i360</a>.
+                            brand new <a href="https://britishairwaysi360.com/" target="_blank">British Airways
+                                i360</a>.
                             <br>
                             The city is also home to a cornucopia of cultural delights as well as big name shops and
                             hundreds of independent boutiques.
                             There are many award-winning restaurants in Brighton & Hove catering for all tastes from
                             classic
                             fish 'n' chips to creative vegetarian restaurants and even a zero waste restaurant.
-                            <br>
+                            <br><br>
                             With so much to explore you will need to book accommodation in Brighton to really make the
                             most
                             of your visit and see all the city has to offer.
                         </p>
-                        <a class="read_more_button" data-content="toggle-text">Read more....</a>
+                        
+                            <a class="read_more_button" data-content="toggle-text">Read more....</a>
+
                     </div>
                 </div>
                 <div class="container-fluid">
@@ -288,7 +304,8 @@
                                         alt="Brighton's Baqueano restaurant">
                                     <div class="card-body d-flex flex-column">
                                         <h5 class="card-title-int card-head">Baqueano</h5>
-                                        <p class="card-text-int card-content">Baqueano is the only Argentinian restaurant in Brighton that
+                                        <p class="card-text-int card-content">Baqueano is the only Argentinian
+                                            restaurant in Brighton that
                                             serves Entraña (skirt steak) and Mollejas (sweetbread).
                                             <br>
                                         </p>
@@ -395,17 +412,16 @@
                             Towns”
                             in the prestigious Which Holiday Survey, “Best Family Holiday Destination” by readers of
                             <a href="https://www.coastmagazine.co.uk/" target="_blank">COAST magazine</a>,
-                            and recently won Gold for “Best Seaside Towns for Families 2019” by <a href="https://www.dayoutwiththekids.co.uk/" target="_blank"> Days Out with the Kids</a>.
+                            and recently won Gold for “Best Seaside Towns for Families 2019” by <a
+                                href="https://www.dayoutwiththekids.co.uk/" target="_blank"> Days Out with the Kids</a>.
                             Newquay also has some of Cornwall’s finest beaches! Newquay’s laid-back charm is here for
                             everyone to enjoy.
-                            <br>
+                            <br><br>
                             Whether you’re looking for a contemporary self catering apartment, a high quality holiday
                             park
                             to bring your camper, caravan or tent, a great value bed and breakfast or a top quality
                             hotel
-                            and spa, Newquay has it all.
-                            <br>
-                            Newquay is open all year, easy to get to by rail, road or air and offers a range of top
+                            and spa, Newquay has it all. Newquay is open all year, easy to get to by rail, road or air and offers a range of top
                             quality
                             attractions within easy reach, alongside classic events and exhilarating activities both in
                             and
@@ -413,13 +429,11 @@
                             Fistral Beach is Newquay's iconic beach, quite simply one of the most consistent and best
                             surfing beaches in the UK. This beautiful beach is west facing, long and sandy and backed by
                             sand dunes, rocks and cliffs.
-                            <br>
+                            <br><br>
                             Fistral is the perfect family beach offering simple pleasures of sea and surf combined with
                             first class beach and seafront facilities including surf equipment hire, lessons, car
                             parking,
-                            restaurants and cafes.
-                            <br>
-                            This world class beach is also home to some of the biggest events and festivals.
+                            restaurants and cafes. This world class beach is also home to some of the biggest events and festivals.
                         </p>
                         <a class="read_more_button" data-content="toggle-text">Read more....</a>
                     </div>
@@ -638,29 +652,32 @@
                         <p class="card-text panel-collapse collapse in"><span class="capital">C</span>ardigan, West
                             Wales,
                             is the gateway to the <a href="http://visitteifivalley.uk/" target="_blank">Teifi
-                            Valley</a> and the <a href="http://www.discoverceredigion.wales/outdoor-activities-and-adventures/walk-ceredigion/the-ceredigion-coast-path/" target="_blank">Ceredigion and
-                            Pembrokeshire Coastal Paths</a>.
+                                Valley</a> and the <a
+                                href="http://www.discoverceredigion.wales/outdoor-activities-and-adventures/walk-ceredigion/the-ceredigion-coast-path/"
+                                target="_blank">Ceredigion and
+                                Pembrokeshire Coastal Paths</a>.
                             The ancient town sits on the estuary of the River Teifi at the base
                             of Cardigan Bay.
-                            <br>
+                            <br><br>
                             Its unspoilt townscape and rich heritage provide a nostalgic backdrop to a thriving
                             culture of
                             arts and crafts, events and music festivals, and is a good base from which to discover
-                            Ceredigion, Pembrokeshire and Carmarthenshire.
-                            <br>
-                            A day out at <a href="https://www.thebeachguide.co.uk/south-wales/ceredigion/penbryn.htm" target="_blank">Penbryn</a> needs to be planned but is well worth the extra effort involved.
+                            Ceredigion, Pembrokeshire and Carmarthenshire. A day out at <a href="https://www.thebeachguide.co.uk/south-wales/ceredigion/penbryn.htm"
+                                target="_blank">Penbryn</a> needs to be planned but is well worth the extra effort
+                            involved.
                             The car
                             park and facilities are some 400 metres from the beach! But there is a turning circle
                             and
                             dropping off point at the beach edge.
-                            <br>
-                            Penbryn is owned by the <a href="https://www.nationaltrust.org.uk/coast-and-beaches" target="_blank">National Trust The beach</a>, almost a mile in length, is unspoilt
+                            <br><br>
+                            Penbryn is owned by the <a href="https://www.nationaltrust.org.uk/coast-and-beaches"
+                                target="_blank">National Trust The beach</a>, almost a mile in length, is unspoilt
                             and the
                             fine golden sand and shallow waters make it perfect for children Discover the delights
                             of the
-                            rock pools or there is fine walking to be had.
-                            <br>
-                            There is a woodland walk from the car park to the beach or at low tide <a href="https://en.wikipedia.org/wiki/Tresaith" target="_blank">Tresaith</a> can be
+                            rock pools or there is fine walking to be had. 
+                            There is a woodland walk from the car park to the beach or at low tide <a
+                                href="https://en.wikipedia.org/wiki/Tresaith" target="_blank">Tresaith</a> can be
                             reached.
                             Please do not bring your dog. The immediate area is sympathetic to coastal and woodland
                             birds
@@ -902,12 +919,23 @@
                             Staffin.
                             Notable villages in the south of Skye include Broadford, Armadale, Carbost, Elgol
                             and Kyleakin.
-                            <br>
-                            The Island has a rich History covering many topics, such as: <a href="https://www.scottishgeology.com/geo/scotlands-fossils/" target="_blank">Dinosaur Fossils</a>, <a href="https://www.scotsman.com/whats-on/arts-and-entertainment/6-scotlands-bloodiest-clan-battles-594844" target="_blank">Clan
-                            Warfare</a>,
-                            <a href="https://www.britannica.com/event/Highland-Clearances" target="_blank">Highland Clearances</a> and the infamous <a href="https://www.history.co.uk/biographies/bonnie-prince-charlie" target="_blank">‘Bonnie Prince Charlie’</a> and the <a href="https://www.historic-uk.com/HistoryUK/HistoryofScotland/The-Jacobite-Revolts-Chronology/" target="_blank">Jacobite
-                            Rebellion</a>.
-                            Both <a href="https://www.armadalecastle.com/" target="_blank">Clan MacDonald</a> and <a href="https://www.visitscotland.com/info/tours/clan-macleod-tour-f9c377f6" target="_blank">Clan MacLeod</a> have their Clan Castles on the Island and
+                            <br><br>
+                            The Island has a rich History covering many topics, such as: <a
+                                href="https://www.scottishgeology.com/geo/scotlands-fossils/" target="_blank">Dinosaur
+                                Fossils</a>, <a
+                                href="https://www.scotsman.com/whats-on/arts-and-entertainment/6-scotlands-bloodiest-clan-battles-594844"
+                                target="_blank">Clan
+                                Warfare</a>,
+                            <a href="https://www.britannica.com/event/Highland-Clearances" target="_blank">Highland
+                                Clearances</a> and the infamous <a
+                                href="https://www.history.co.uk/biographies/bonnie-prince-charlie"
+                                target="_blank">‘Bonnie Prince Charlie’</a> and the <a
+                                href="https://www.historic-uk.com/HistoryUK/HistoryofScotland/The-Jacobite-Revolts-Chronology/"
+                                target="_blank">Jacobite
+                                Rebellion</a>.
+                            Both <a href="https://www.armadalecastle.com/" target="_blank">Clan MacDonald</a> and <a
+                                href="https://www.visitscotland.com/info/tours/clan-macleod-tour-f9c377f6"
+                                target="_blank">Clan MacLeod</a> have their Clan Castles on the Island and
                             should be on your
                             list of places to visit.
                             <br><br>
@@ -916,9 +944,7 @@
                             Eagle at the top of bird watchers lists. Otters, seals, whales, dolphins and red
                             deer are just
                             some of the other impressive creatures that can be seen on and around the Isle of
-                            Skye.
-                            <br>
-                            Skye is a world class destination for walkers and climbers. ‘The Cuillin Range’ and
+                            Skye. Skye is a world class destination for walkers and climbers. ‘The Cuillin Range’ and
                             ‘The
                             Trotternish Ridge’ offer challenging climbs and interesting scrambles. The Cuillin
                             Range offers
@@ -1145,17 +1171,18 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- Contact section -->
 
-    <div class="container">
+    <section class="container">
         <h2 id="contact" class="text-center">Contact</h2>
         <p class="text-center contact-desc">Contact us for any advice on these or any other places to stay in
             Britain
             and also sign up for our free email newsletter for the latest updates</p>
 
-        <form id="background-teddy" onsubmit="sendMail(this); alert('Thanks for getting in touch, we will contact you soon.'); return">
+        <form id="background-teddy"
+            onsubmit="sendMail(this); alert('Thanks for getting in touch, we will contact you soon.'); return">
 
             <input type="text" name="name" class="form-control" placeholder="Name:" id="name" required>
             <br>
@@ -1169,7 +1196,7 @@
                 <button type="submit" class="btn btn-outline-info">Submit</button>
             </div>
         </form>
-    </div>
+    </section>
 
     <footer class="footer">
         <div class="row">
