--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="#home" id = "link1">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#locations">Locations</a>
+                    <a class="nav-link" href="#locations" id = "link2">Locations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link" href="#contact" id = "link3">Contact</a>
                 </li>
             </ul>
         </div>
@@ -1175,7 +1175,7 @@
 
     <!-- Contact section -->
 
-    <section class="container">
+    <section class="container" id= "contact-container">
         <h2 id="contact" class="text-center">Contact</h2>
         <p class="text-center contact-desc">Contact us for any advice on these or any other places to stay in
             Britain
