--- a/index.html
+++ b/index.html
@@ -8,12 +8,6 @@
     <!-- Bootstrap CDN CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
         integrity="undefined" crossorigin="anonymous">
-    <!-- Boostrap CDN JavaScript -->
-    <!--   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js" integrity="undefined"
-        crossorigin="anonymous"></script> -->
-    <!-- Bootstrap JavaScript Bundle -->
-    <!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="undefined"
-        crossorigin="anonymous"></script> -->
 
     <!-- Bootdtrap JavaScript and JQuery recommendation-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -32,21 +26,12 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
-    <!-- FontAwesome -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-        integrity="undefined" crossorigin="anonymous"> -->
-
     <script src="https://kit.fontawesome.com/494cd39dc5.js" crossorigin="anonymous"></script>
-
-    <!-- Google font html attempt -->
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> -->
 
     <!-- CSS link-->
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- EmailJS-->
-
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
     <script type="text/javascript">
         (function () {
@@ -62,13 +47,14 @@
 
     <!-- Empty area to bring links back to top of page -->
 
-    <div id = "home">
-        
+    <div id="home">
+
     </div>
 
     <!-- Button floating on page to bring back to top -->
 
     <a id="buttonFloat"></a>
+
     <!-- Navigation bar -->
 
     <nav class="sticky-top navbar navbar-expand-lg navbar-light nav-down">
@@ -87,13 +73,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#home" id = "link1">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#home" id="link1">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#locations" id = "link2">Locations</a>
+                    <a class="nav-link" href="#locations" id="link2">Locations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact" id = "link3">Contact</a>
+                    <a class="nav-link" href="#contact" id="link3">Contact</a>
                 </li>
             </ul>
         </div>
@@ -191,9 +177,7 @@
                             most
                             of your visit and see all the city has to offer.
                         </p>
-                        
-                            <a class="read_more_button" data-content="toggle-text">Read more....</a>
-
+                        <a class="read_more_button" data-content="toggle-text">Read more....</a>
                     </div>
                 </div>
                 <div class="container-fluid">
@@ -392,7 +376,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -402,10 +385,8 @@
         <div class="col mb-4">
             <div class="card">
                 <div id="newquay-card-body">
-
                     <div class="card-body">
                         <h5 class="card-title">NEWQUAY</h5>
-
                         <p class="card-text panel-collapse collapse i"><span class="capital">L</span>ocated on
                             Cornwall’s
                             Atlantic Coast, Newquay has previously been voted as “One of the Nation's Favourite Seaside
@@ -421,7 +402,8 @@
                             park
                             to bring your camper, caravan or tent, a great value bed and breakfast or a top quality
                             hotel
-                            and spa, Newquay has it all. Newquay is open all year, easy to get to by rail, road or air and offers a range of top
+                            and spa, Newquay has it all. Newquay is open all year, easy to get to by rail, road or air
+                            and offers a range of top
                             quality
                             attractions within easy reach, alongside classic events and exhilarating activities both in
                             and
@@ -433,7 +415,8 @@
                             Fistral is the perfect family beach offering simple pleasures of sea and surf combined with
                             first class beach and seafront facilities including surf equipment hire, lessons, car
                             parking,
-                            restaurants and cafes. This world class beach is also home to some of the biggest events and festivals.
+                            restaurants and cafes. This world class beach is also home to some of the biggest events and
+                            festivals.
                         </p>
                         <a class="read_more_button" data-content="toggle-text">Read more....</a>
                     </div>
@@ -635,8 +618,6 @@
                             </div>
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
@@ -662,7 +643,8 @@
                             Its unspoilt townscape and rich heritage provide a nostalgic backdrop to a thriving
                             culture of
                             arts and crafts, events and music festivals, and is a good base from which to discover
-                            Ceredigion, Pembrokeshire and Carmarthenshire. A day out at <a href="https://www.thebeachguide.co.uk/south-wales/ceredigion/penbryn.htm"
+                            Ceredigion, Pembrokeshire and Carmarthenshire. A day out at <a
+                                href="https://www.thebeachguide.co.uk/south-wales/ceredigion/penbryn.htm"
                                 target="_blank">Penbryn</a> needs to be planned but is well worth the extra effort
                             involved.
                             The car
@@ -675,7 +657,7 @@
                             and the
                             fine golden sand and shallow waters make it perfect for children Discover the delights
                             of the
-                            rock pools or there is fine walking to be had. 
+                            rock pools or there is fine walking to be had.
                             There is a woodland walk from the car park to the beach or at low tide <a
                                 href="https://en.wikipedia.org/wiki/Tresaith" target="_blank">Tresaith</a> can be
                             reached.
@@ -894,7 +876,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -1167,7 +1148,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -1175,14 +1155,18 @@
 
     <!-- Contact section -->
 
-    <section class="container" id= "contact-container">
+    <section class="container" id="contact-container">
         <h2 id="contact" class="text-center">Contact</h2>
         <p class="text-center contact-desc">Contact us for any advice on these or any other places to stay in
             Britain
             and also sign up for our free email newsletter for the latest updates</p>
 
+        <!-- Teddy background -->
+
         <form id="background-teddy"
             onsubmit="sendMail(this); alert('Thanks for getting in touch, we will contact you soon.'); return">
+
+            <!-- Form input -->
 
             <input type="text" name="name" class="form-control" placeholder="Name:" id="name" required>
             <br>
@@ -1197,6 +1181,8 @@
             </div>
         </form>
     </section>
+
+    <!-- Footer -->
 
     <footer class="footer">
         <div class="row">
@@ -1249,8 +1235,6 @@
         </div>
     </footer>
 </body>
-<!-- <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
-</script> -->
 
 <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap&libraries=places"
