contact background changed

--- a/index.html
+++ b/index.html
@@ -1161,9 +1161,9 @@
             Britain
             and also sign up for our free email newsletter for the latest updates</p>
 
-        <!-- Teddy background -->
+        <!-- Contact background -->
 
-        <form id="background-teddy"
+        <form id="background-contact"
             onsubmit="sendMail(this); alert('Thanks for getting in touch, we will contact you soon.'); return">
 
             <!-- Form input -->
