--- a/index.html
+++ b/index.html
@@ -61,16 +61,6 @@
         <a class="navbar-brand nav-link" href="#home">
             <i class="fas fa-suitcase" aria-hidden="true"><span id="nav-staycation-britain"> Staycation
                     Britain</span></i>
-
-            <span class="sr-only">Suitcase icon</span>
-        </a>
-
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="#home" id="link1">Home <span class="sr-only">(current)</span></a>
@@ -81,7 +71,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#contact" id="link3">Contact</a>
                 </li>
-            </ul>
+            </ul><span class="sr-only">Suitcase icon</span>
+
+        </a>
+
+
+        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav"> -->
+
         </div>
     </nav>
 
