Red skye restaurant html link updated

--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,7 @@
                                             with breath-taking views of the Cuillin Ranges and Applecross Hills.
                                             <br>
                                         </p>
-                                        <a href="redskyerestaurant" target="_blank" class="btn btn-info mt-auto">more
+                                        <a href="http://www.redskyerestaurant.co.uk/" target="_blank" class="btn btn-info mt-auto">more
                                             info</a>
                                     </div>
                                 </div>
