validator W3 html test and update

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Tez Baydu">
 
     <!-- Bootstrap CDN CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css"
@@ -32,8 +33,8 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- EmailJS-->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
-    <script type="text/javascript">
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <script>
         (function () {
             emailjs.init("user_jtbYcTDIFOX4Z8NAmbqq3");
         })();
@@ -63,7 +64,7 @@
                     Britain</span></i>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#home" id="link1">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#home" id="link1">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#locations" id="link2">Locations</a>
