closing anchor tag removed from Home link as advised by W3

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
                     Britain</span></i>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#home" id="link1">Home</a>
+                    <a class="nav-link" href="#home" id="link1" class="sr-only">Home
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#locations" id="link2">Locations</a>
+                    <a class="nav-link" href="#locations" id="link2" class="sr-only">Locations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact" id="link3">Contact</a>
+                    <a class="nav-link" href="#contact" id="link3" class="sr-only">Contact</a>
                 </li>
             </ul><span class="sr-only">Suitcase icon</span>
 
@@ -353,7 +353,7 @@
                                             number of contemporary sea-facing rooms with balconies and terraces.
                                             <br>
                                         </p>
-                                        <a href="www.google.com" target="_blank" class="btn btn-info mt-auto">more
+                                        <a href="https://www.malmaison.com/locations/brighton/" target="_blank" class="btn btn-info mt-auto">more
                                             info</a>
                                     </div>
                                 </div>
