--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Tez Baydu">
 
     <!-- Bootstrap CDN CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css", integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Bootstrap JavaScript and JQuery recommendation-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -63,13 +63,13 @@
                     Britain</span></i>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#home" id="link1" class="sr-only">Home
+                    <a class="nav-link sr-only" href="#home" id="link1">Home
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#locations" id="link2" class="sr-only">Locations</a>
+                    <a class="nav-link sr-only" href="#locations" id="link2">Locations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact" id="link3" class="sr-only">Contact</a>
+                    <a class="nav-link sr-only" href="#contact" id="link3">Contact</a>
                 </li>
             </ul><span class="sr-only">Suitcase icon</span>
 
