sr-only classes removed from links as this hides them git status

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                     Britain</span></i>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link sr-only" href="#home" id="link1">Home
+                    <a class="nav-link" href="#home" id="link1">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sr-only" href="#locations" id="link2">Locations</a>
+                    <a class="nav-link" href="#locations" id="link2">Locations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link sr-only" href="#contact" id="link3">Contact</a>
+                    <a class="nav-link" href="#contact" id="link3">Contact</a>
                 </li>
             </ul><span class="sr-only">Suitcase icon</span>
 
