--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <a class="navbar-brand nav-link" href="#home">
             <i class="fas fa-suitcase" aria-hidden="true"><span id="nav-staycation-britain"> Staycation
                     Britain</span></i>
+                </ul><span class="sr-only">Suitcase icon</span></a>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="#home" id="link1">Home</a>
@@ -71,9 +72,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#contact" id="link3">Contact</a>
                 </li>
-            </ul><span class="sr-only">Suitcase icon</span>
-
-        </a>
 
 
         <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -1247,5 +1245,7 @@
 <link rel="stylesheet" href="assets/css/mapmarkerstyle.css">
 
 <script src="assets/js/email.js"></script>
+
+<script src="assets/js/eversion.jshintrc"></script>
 
 </html>
