/ul placed before starting ul after previous version updated - have placed after

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <a class="navbar-brand nav-link" href="#home">
             <i class="fas fa-suitcase" aria-hidden="true"><span id="nav-staycation-britain"> Staycation
                     Britain</span></i>
-                </ul><span class="sr-only">Suitcase icon</span></a>
+                <span class="sr-only">Suitcase icon</span></a>
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="#home" id="link1">Home</a>
@@ -72,14 +72,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#contact" id="link3">Contact</a>
                 </li>
-
-
-        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav"> -->
-
+            </ul>
         </div>
     </nav>
 
@@ -1234,10 +1227,7 @@
     </footer>
 </body>
 
-<script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap&libraries=places"
-    async>
-</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap&libraries=places" async></script>
 
 <script src="assets/js/script.js"></script>
 <script src="assets/js/maps.js"></script>
