--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@
     </footer>
 </body>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap&libraries" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap" async defer></script>
 
 <script src="assets/js/script.js"></script>
 <script src="assets/js/maps.js"></script>
