google maps script moved within body

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
 
-
-
     <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
@@ -1224,9 +1222,11 @@
             </div>
         </div>
     </footer>
-</body>
 
+<!-- Google maps -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap" async defer></script>
+
+</body>
 
 <script src="assets/js/script.js"></script>
 <script src="assets/js/maps.js"></script>
