google maps class sr-only as affected footer...?!

--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@
     </footer>
 
 <!-- Google maps -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap" async defer class="sr-only"></script>
 
 </body>
 
