--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="author" content="Tez Baydu">
 
     <!-- Bootstrap CDN CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- Bootstrap JavaScript and JQuery recommendation-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -59,18 +60,18 @@
         <a class="navbar-brand nav-link" href="#home">
             <i class="fas fa-suitcase" aria-hidden="true"><span id="nav-staycation-britain"> Staycation
                     Britain</span></i>
-                <span class="sr-only">Suitcase icon</span></a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#home" id="link1">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#locations" id="link2">Locations</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contact" id="link3">Contact</a>
-                </li>
-            </ul>
+            <span class="sr-only">Suitcase icon</span></a>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#home" id="link1">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#locations" id="link2">Locations</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#contact" id="link3">Contact</a>
+            </li>
+        </ul>
     </nav>
 
     <!-- Hero container -->
@@ -340,7 +341,8 @@
                                             number of contemporary sea-facing rooms with balconies and terraces.
                                             <br>
                                         </p>
-                                        <a href="https://www.malmaison.com/locations/brighton/" target="_blank" class="btn btn-info mt-auto">more
+                                        <a href="https://www.malmaison.com/locations/brighton/" target="_blank"
+                                            class="btn btn-info mt-auto">more
                                             info</a>
                                     </div>
                                 </div>
@@ -1066,7 +1068,8 @@
                                             with breath-taking views of the Cuillin Ranges and Applecross Hills.
                                             <br>
                                         </p>
-                                        <a href="http://www.redskyerestaurant.co.uk/" target="_blank" class="btn btn-info mt-auto">more
+                                        <a href="http://www.redskyerestaurant.co.uk/" target="_blank"
+                                            class="btn btn-info mt-auto">more
                                             info</a>
                                     </div>
                                 </div>
@@ -1221,10 +1224,12 @@
                 </ul>
             </div>
         </div>
-    </footer>
 
-<!-- Google maps -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap" async defer class="sr-only"></script>
+        <!-- Google maps -->
+        <script
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap"
+            async defer class="sr-only"></script>
+    </footer>
 
 </body>
 
