--- a/index.html
+++ b/index.html
@@ -1224,22 +1224,24 @@
                 </ul>
             </div>
         </div>
-
-        <!-- Google maps -->
-        <script
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap"
-            async defer class="sr-only"></script>
     </footer>
+
+    <!-- Google maps -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7FvKpzgVhkZRmkGj7JLKjvR91_JjVAeQ&callback=initMap"
+        async defer class="sr-only"></script>
+
+    <script src="assets/js/script.js"></script>
+    <script src="assets/js/maps.js"></script>
+
+    <link rel="stylesheet" href="assets/css/mapmarkerstyle.css">
+
+    <script src="assets/js/email.js"></script>
+
+    <script src="assets/js/eversion.jshintrc"></script>
+
 
 </body>
 
-<script src="assets/js/script.js"></script>
-<script src="assets/js/maps.js"></script>
 
-<link rel="stylesheet" href="assets/css/mapmarkerstyle.css">
-
-<script src="assets/js/email.js"></script>
-
-<script src="assets/js/eversion.jshintrc"></script>
 
 </html>
